k8s/apps/krakend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: krakend
